# ur5-bin-picking

./: .gitignore  README.md  方案设计.md  项目进展.md
docs/: 00_开发计划.md  01_环境搭建.md  02_运行说明.md  03_测试步骤.md  04_夹爪URDF集成.md  05_手眼标定.md  05_手眼标定验证清单.md  06_操作手册.md  07_无模型抓取测试.md  08_阶段二大模型接入.md  09_整机测试教程.md  10_移动操作方向调研.md  11_调研记录_发论文创新点与就业方向.md  12_调研记录_抓取策略论文与方法.md  13_MoveIt集成.md
inference/: requirements.txt  server.py
inference/wrappers/: base.py  fake_wrapper.py  foundationpose_wrapper.py  grasp_wrapper.py  sam6d_wrapper.py
ros2_ws/src/bin_picking_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/bin_picking_bringup/bin_picking_bringup/: handeye_verify.py  moveit_params.py
ros2_ws/src/bin_picking_bringup/config/: handeye_result.yaml
ros2_ws/src/bin_picking_bringup/launch/: calibrate_handeye.launch.py  model_free_test.launch.py  moveit.launch.py  sim.launch.py  system.launch.py  system_v2.launch.py
ros2_ws/src/bin_picking_bringup/rviz/: bin_picking.rviz  moveit.rviz
ros2_ws/src/bin_picking_description/: CMakeLists.txt  package.xml
ros2_ws/src/bin_picking_description/meshes/: README.md  test_block.stl
ros2_ws/src/bin_picking_description/scene/: README.md
ros2_ws/src/bin_picking_description/srdf/: ur5_with_gripper.srdf.xacro
ros2_ws/src/bin_picking_description/urdf/: gripper_standalone.xacro  ur5_with_gripper.xacro  ur5_with_gripper_control.xacro  worm_epgc50.xacro
ros2_ws/src/bin_picking_grasp/: package.xml  setup.cfg  setup.py
ros2_ws/src/bin_picking_grasp/bin_picking_grasp/: geometry_utils.py  grasp_executor.py  grasp_planner.py  gripper_driver.py  inhand_estimator.py  pick_loop.py  publish_test_grasp.py
ros2_ws/src/bin_picking_grasp/config/: grasp_params.yaml
ros2_ws/src/bin_picking_grasp/launch/: grasp.launch.py
ros2_ws/src/bin_picking_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/bin_picking_interfaces/msg/: GraspCandidate.msg  GraspCandidateArray.msg  ObjectPose.msg  ObjectPoseArray.msg
ros2_ws/src/bin_picking_interfaces/srv/: EstimateInHand.srv  SetGripper.srv
ros2_ws/src/bin_picking_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/bin_picking_perception/bin_picking_perception/: model_free_grasp.py  perception_node.py  pointcloud_utils.py  pose_estimation.py
ros2_ws/src/bin_picking_perception/config/: model_free_params.yaml  perception_params.yaml
ros2_ws/src/bin_picking_perception/launch/: perception.launch.py
ros2_ws/src/bin_picking_perception_v2/: package.xml  setup.cfg  setup.py
ros2_ws/src/bin_picking_perception_v2/bin_picking_perception_v2/: foundationpose_client.py  grasp_client.py  rgbd_client.py  sam6d_client.py
ros2_ws/src/bin_picking_perception_v2/config/: perception_v2_params.yaml
ros2_ws/src/bin_picking_perception_v2/launch/: perception_v2.launch.py
scripts/: annotate_grasp.py  check_build.sh  diag_gripper_write.py  diag_gripper_write2.py  gen_aruco_marker.py  generate_test_part.py  handeye_to_yaml.py  offline_pose_test.py  record_pointcloud.sh  replay_and_perceive.sh  test_gripper_modbus.py
