<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bin_picking_bringup</name>
  <version>0.0.1</version>
  <description>系统总启动：相机 + UR5 + MoveIt2 + 感知 + 抓取</description>
  <maintainer email="taol16550@gmail.com">tao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <!-- MoveIt 集成：自建 move_group launch（组合模型 URDF/SRDF），见 launch/moveit.launch.py -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>bin_picking_perception</exec_depend>
  <exec_depend>bin_picking_grasp</exec_depend>

  <!-- 阶段1 手眼标定（calibrate_handeye.launch.py 用） -->
  <exec_depend>easy_handeye2</exec_depend>
  <exec_depend>aruco_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
