<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bin_picking_grasp</name>
  <version>0.0.1</version>
  <description>抓取规划 + 沃姆夹爪驱动 + MoveIt2 取放执行</description>
  <maintainer email="taol16550@gmail.com">tao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>bin_picking_interfaces</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <!-- 串口通信(夹爪)用 pip 安装 pyserial / pymodbus，见 docs -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
