<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bin_picking_perception</name>
  <version>0.0.1</version>
  <description>感知节点：点云预处理 + CAD↔场景 6D 位姿估计（PPF 粗配准 + ICP 精配准）</description>
  <maintainer email="taol16550@gmail.com">tao</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>bin_picking_interfaces</exec_depend>
  <!-- Python 第三方依赖（open3d / opencv-contrib）请用 pip 安装，见 docs/01_环境搭建.md -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
